Fixed Warning: include(./calc_ownership.php): failed to open stream: No such file or directory in includes/db_kill_player.php on line 68 
Fixed Warning: include(): Failed opening './calc_ownership.php' for inclusion (include_path='.') in includes/db_kill_player.php on line 68 
Fixed Fatal error: Call to undefined function calc_ownership() in includes/db_kill_player.php on line 69 

TheMightyDude (26 September 2012)
--------------------------------------
Fixed bug that when replying to a message it was sent to the sender and not yourself.
Fixed PHP Fatal error: Call to undefined function ship_to_ship() in includes/planet_combat.php on line 402

TheKabal (22 September 2012)
--------------------------------------
Add rich text editing via CKeditor
Add HTML filtering of rich text submissions via HTML purifier

TheMightyDude (23 September 2012)
--------------------------------------
Did a quick fix on the admin section to allow the displaying of admin module templates, this may need some work to get right, but its working for now.

TheKabal (22 September 2012)
--------------------------------------
Template driven admin.php

TheMightyDude (22 September 2012)
--------------------------------------
Fixed error in code where it filtered the POST Variables it was returning computer_upgrade insted of armor_upgrade.
Fixed Notice: Undefined variable: langvars in includes/db_kill_player.php on line 85 
Fixed Notice: Undefined variable: langvars in includes/db_kill_player.php on line 87

TheKabal (20 September 2012)
--------------------------------------
Replace variable re-assignment with filtering in port2

TheMightyDude (16 September 2012)
--------------------------------------
Fixed Parse error: syntax error, unexpected '.' in includes/ibank_consolidate2.php on line 102

TheKabal (15 September 2012)
--------------------------------------
Admin panel now accepts drop-in modules (create a valid php file in admin/, and it will appear as a choice in the admin menu)