@@ -3,6 +3,7 @@ TheMightyDude (30 September 2012)
 Fixed Warning: include(./calc_ownership.php): failed to open stream: No such file or directory in includes/db_kill_player.php on line 68 
 Fixed Warning: include(): Failed opening './calc_ownership.php' for inclusion (include_path='.') in includes/db_kill_player.php on line 68 
 Fixed Fatal error: Call to undefined function calc_ownership() in includes/db_kill_player.php on line 69 
+Fixed multi includes (SIGH) to calc_onwership.php when in planet combat.
 
 TheMightyDude (26 September 2012)
 --------------------------------------
